fix: add typing extensions

--- a/docs/source/models/convolutional-generative-adversarial-networks.ipynb
+++ b/docs/source/models/convolutional-generative-adversarial-networks.ipynb
@@ -5,7 +5,7 @@
    "id": "3539db47",
    "metadata": {},
    "source": [
-    "# generative-adversarial-networks"
+    "# convolutional-generative-adversarial-networks"
    ]
   },
   {
@@ -31,9 +31,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7ad94ee",
+   "metadata": {},
+   "source": [
+    "## usage"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0463c0f4",
+   "id": "6d0e7c2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import deeply\n",
+    "\n",
+    "gan = deeply.hub(\"convolutional-generative-adversarial-network\", x = 28 * 28)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83a4346f",
    "metadata": {},
    "outputs": [],
    "source": []
