add convolutional gan

--- a/docs/source/models/convolutional-generative-adversarial-networks.ipynb
+++ b/docs/source/models/convolutional-generative-adversarial-networks.ipynb
@@ -40,20 +40,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6d0e7c2d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import deeply\n",
     "\n",
-    "gan = deeply.hub(\"convolutional-generative-adversarial-network\", x = 28 * 28)"
+    "gan = deeply.hub(\"convolutional-generative-adversarial-network\", x = 28)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "372b9179",
+   "metadata": {},
+   "source": [
+    "## example"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83a4346f",
+   "id": "d398cbf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b09266d68560493aa5cee824562e4e20",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0epoch [00:00, ?epoch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "420eae5adb7a4c72b8f35e59b99ffecc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0batch [00:00, ?batch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.9/site-packages/tensorflow/python/util/dispatch.py:1082: UserWarning: \"`binary_crossentropy` received `from_logits=True`, but the `output` argument was produced by a sigmoid or softmax activation and thus does not represent logits. Was this intended?\"\n",
+      "  return dispatch_target(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Can save best model only with loss available, skipping.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Can save best model only with loss available, skipping.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Can save best model only with loss available, skipping.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Can save best model only with loss available, skipping.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Can save best model only with loss available, skipping.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Can save best model only with loss available, skipping.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Can save best model only with loss available, skipping.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Can save best model only with loss available, skipping.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "import deeply.datasets as dd\n",
+    "\n",
+    "config = dict(batch_size = 128, epochs = 10)\n",
+    "\n",
+    "def norm(image):\n",
+    "    return tf.cast(image, tf.float32) / 255.0\n",
+    "\n",
+    "mnist = dd.load(\"mnist\", shuffle_files = True, as_supervised = True)\n",
+    "data  = dd.concat((mnist[\"train\"], mnist[\"test\"]), mapper = lambda image, label: norm(image))\n",
+    "\n",
+    "gan.fit(data.batch(config[\"batch_size\"]), **config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b2007a4",
    "metadata": {},
    "outputs": [],
    "source": []
