fix: add deeply plots

--- a/docs/source/models/convolutional-generative-adversarial-networks.ipynb
+++ b/docs/source/models/convolutional-generative-adversarial-networks.ipynb
@@ -47,12 +47,12 @@
    "source": [
     "import deeply\n",
     "\n",
-    "gan = deeply.hub(\"convolutional-generative-adversarial-network\", x = 28, batch_norm = True, dropout = 0.4)"
+    "gan = deeply.hub(\"convolutional-generative-adversarial-network\", x = 28, batch_norm = False, dropout = 0.4)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "38b75ba9",
+   "id": "976cd6ac",
    "metadata": {},
    "source": [
     "## example"
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f5735c5",
+   "id": "9f1ae69c",
    "metadata": {
     "scrolled": false
    },
