feat: create high-level api

--- a/docs/source/models/dcgan.ipynb
+++ b/docs/source/models/dcgan.ipynb
@@ -5,7 +5,7 @@
    "id": "3539db47",
    "metadata": {},
    "source": [
-    "# convolutional-generative-adversarial-networks"
+    "# Deep Convolutional Generative Adversarial Networks (DCGAN)"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "source": [
     "import deeply\n",
     "\n",
-    "gan = deeply.hub(\"convolutional-generative-adversarial-network\", x = 28, batch_norm = False, dropout = 0.4)"
+    "gan = deeply.hub(\"dcgan\", x = 28, batch_norm = True)"
    ]
   },
   {
@@ -70,7 +70,7 @@
     "import tensorflow as tf\n",
     "import deeply.datasets as dd\n",
     "\n",
-    "config = dict(batch_size = 128, epochs = 30, use_multiprocessing = True)\n",
+    "config = dict(batch_size = 256, epochs = 30, use_multiprocessing = True)\n",
     "\n",
     "def norm(image):\n",
     "    return tf.cast(image, tf.float32) / 255.0\n",
@@ -80,6 +80,24 @@
     "\n",
     "gan.fit(data.batch(config[\"batch_size\"]), **config)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45dfa585",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gan.generator.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8341ff8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
