--- a/docs/source/models/dcgan.ipynb
+++ b/docs/source/models/dcgan.ipynb
@@ -40,14 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6d0e7c2d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import deeply\n",
-    "\n",
-    "gan = deeply.hub(\"dcgan\", x = 28, batch_norm = True)"
+    "gan = deeply.hub(\"dcgan\", x = 28, encoder_batch_norm = True, decoder_dropout_rate = 0.2,\n",
+    "                 encoder_layer_growth_rate = 2,\n",
+    "                 init_decoder_units = 256, decoder_layer_growth_rate = 0.5, kernel_size = 5)"
    ]
   },
   {
@@ -70,31 +71,21 @@
     "import tensorflow as tf\n",
     "import deeply.datasets as dd\n",
     "\n",
-    "config = dict(batch_size = 256, epochs = 30, use_multiprocessing = True)\n",
+    "config = dict(batch_size = 256, epochs = 50)\n",
     "\n",
     "def norm(image):\n",
-    "    return tf.cast(image, tf.float32) / 255.0\n",
+    "    return (tf.cast(image, tf.float32) - 127.5) / 127.5\n",
     "\n",
     "mnist = dd.load(\"mnist\", shuffle_files = True, as_supervised = True)\n",
     "data  = dd.concat((mnist[\"train\"], mnist[\"test\"]), mapper = lambda image, label: norm(image))\n",
     "\n",
-    "gan.fit(data.batch(config[\"batch_size\"]), **config)"
+    "history = gan.fit(data, **config)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45dfa585",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gan.generator.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8341ff8",
+   "id": "c9ec20f3",
    "metadata": {},
    "outputs": [],
    "source": []
