--- a/docs/source/models/vae.ipynb
+++ b/docs/source/models/vae.ipynb
@@ -5,7 +5,7 @@
    "id": "692d1598",
    "metadata": {},
    "source": [
-    "# variational-autoencoders"
+    "# Variational AutoEncoders (VAE)"
    ]
   },
   {
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6a2d0a06",
    "metadata": {},
    "outputs": [],
    "source": [
     "import deeply\n",
     "\n",
-    "vae = deeply.hub(\"variational-autoencoder\", x = 28 * 28)"
+    "vae = deeply.hub(\"vae\", x = 28 * 28)"
    ]
   },
   {
