--- a/docs/source/models/dcgan.ipynb
+++ b/docs/source/models/dcgan.ipynb
@@ -48,7 +48,8 @@
     "import deeply\n",
     "gan = deeply.hub(\"dcgan\", x = 28, encoder_batch_norm = True, decoder_dropout_rate = 0.2,\n",
     "                 encoder_layer_growth_rate = 2,\n",
-    "                 init_decoder_units = 256, decoder_layer_growth_rate = 0.5, kernel_size = 5)"
+    "                 init_decoder_units = 256, decoder_layer_growth_rate = 0.5, kernel_size = 5,\n",
+    "                 encoder_learning_rate = 1e-2, decoder_learning_rate = 1e-2)"
    ]
   },
   {
@@ -74,7 +75,7 @@
     "config = dict(batch_size = 256, epochs = 50)\n",
     "\n",
     "def norm(image):\n",
-    "    return (tf.cast(image, tf.float32) - 127.5) / 127.5\n",
+    "    return tf.cast(image, tf.float32) / 255.0\n",
     "\n",
     "mnist = dd.load(\"mnist\", shuffle_files = True, as_supervised = True)\n",
     "data  = dd.concat((mnist[\"train\"], mnist[\"test\"]), mapper = lambda image, label: norm(image))\n",
@@ -85,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9ec20f3",
+   "id": "1e8cb369",
    "metadata": {},
    "outputs": [],
    "source": []
