--- a/docs/source/models/dcgan.ipynb
+++ b/docs/source/models/dcgan.ipynb
@@ -41,49 +41,36 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0e1ee73d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class norm:\n",
-    "    def fit_transform(self, image):\n",
-    "        return (tf.cast(image, tf.float32) - 127.5) / 127.5\n",
-    "    \n",
-    "    def inverse_transform(self, image):\n",
-    "        return (tf.cast(image, tf.float32) * 127.5) + 127.5\n",
-    "\n",
-    "scaler = norm()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "6d0e7c2d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-24 17:14:14.503562: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-09-24 17:14:14.503582: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2022-09-24 17:14:16.937646: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2022-09-24 17:14:16.937665: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2022-09-24 17:14:16.937681: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (test2-cell-collective): /proc/driver/nvidia/version does not exist\n",
-      "2022-09-24 17:14:16.937833: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-09-25 16:34:27.627213: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "deeply | 2022-09-24 17:14:17,020 | INFO | Building decoder...\n",
-      "deeply | 2022-09-24 17:14:17,103 | INFO | Compiling model dcgan...\n"
+      "2022-09-25 16:34:30.555054: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
    "source": [
     "import deeply\n",
-    "gan = deeply.hub(\"dcgan\", x = 28, decoder_batch_norm = True, encoder_dropout_rate = 0.3,\n",
-    "                 encoder_layer_growth_rate = 2,\n",
+    "import deeply.datasets as dd\n",
+    "from deeply.transformers.scaler import image_scaler\n",
+    "\n",
+    "mnist, info = dd.load(\"mnist\", shuffle_files = True, as_supervised = True, with_info = True)\n",
+    "image_shape = info.features[\"image\"].shape\n",
+    "\n",
+    "gan = deeply.hub(\"dcgan\", input_shape = image_shape, decoder_batch_norm = True, encoder_dropout_rate = 0.3,\n",
+    "                 encoder_layer_growth_rate = 2, scaler = image_scaler,\n",
     "                 init_decoder_units = 256, decoder_layer_growth_rate = 0.5, kernel_size = 5,\n",
-    "                 decoder_strides  = [1, 2], scaler = scaler,\n",
-    "                 final_activation = \"tanh\")"
+    "                 decoder_strides  = [1, 2], final_activation = \"tanh\")"
    ]
   },
   {
@@ -96,52 +83,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9f1ae69c",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "import deeply.datasets as dd\n",
     "from deeply.plots import imgplot as imgplt, mplt\n",
+    "\n",
     "from tqdm.auto import tqdm, trange\n",
     "\n",
-    "mnist  = dd.load(\"mnist\", shuffle_files = True, as_supervised = True)\n",
-    "\n",
-    "mapper = lambda image, label: scaler.fit_transform(image)\n",
+    "mapper = lambda image, label: image_scaler.fit_transform(image)\n",
     "\n",
     "config = dict(batch_size = 256,\n",
-    "              epochs = 50)\n",
+    "              epochs = 20)\n",
+    "batch_size = config[\"batch_size\"]\n",
     "\n",
     "data   = mnist[\"train\"].map(mapper)\n",
-    "batch  = data.batch(config[\"batch_size\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "1a1b5bb5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "noise_dim = gan.generator.input_shape[1]\n",
-    "sample = tf.random.normal([64, noise_dim])\n",
-    "\n",
-    "def plot_img(model):\n",
-    "    imgs = model.generator(sample, training = False)\n",
-    "    imgs = scaler.inverse_transform(imgs)\n",
-    "    imgs = tf.cast(imgs, tf.uint8)\n",
-    "    imgplt(imgs, to_file = \"gan.png\")"
+    "batch  = data.batch(batch_size)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2efe7858",
+   "id": "d6310d39",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -150,26 +125,26 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.015326499938964844,
+       "elapsed": 0.027447223663330078,
        "initial": 0,
        "n": 0,
        "ncols": null,
-       "nrows": 17,
+       "nrows": 12,
        "postfix": null,
        "prefix": "",
        "rate": null,
-       "total": 50,
+       "total": 20,
        "unit": "it",
        "unit_divisor": 1000,
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5f19d5dbd844b3e84b844637a3147bc",
+       "model_id": "575b26d4b3a34576bb82572f70383c07",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/50 [00:00<?, ?it/s]"
+       "  0%|          | 0/20 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -181,11 +156,11 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.07280445098876953,
+       "elapsed": 0.08326530456542969,
        "initial": 0,
        "n": 0,
        "ncols": null,
-       "nrows": 17,
+       "nrows": 12,
        "postfix": null,
        "prefix": "",
        "rate": null,
@@ -195,7 +170,7 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e82a7f28e6c42668e1b7431986b0253",
+       "model_id": "1b448ee1744f4573b343edb135b5cb1e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -211,77 +186,19 @@
      "output_type": "stream",
      "text": [
       "/home/helikarlab/dev/deeply/src/deeply/plots.py:113: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
-      "  fig, axes = pplt.subplots(n_plots, 1, sharex = True)\n"
+      "  fig, axes = mplt.subplots(n_plots, 1, sharex = True)\n"
      ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.02304363250732422,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": 17,
-       "postfix": null,
-       "prefix": "",
-       "rate": null,
-       "total": 235,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c750d297f624948a8545b5a90e55a79",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/235 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.02164769172668457,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": 17,
-       "postfix": null,
-       "prefix": "",
-       "rate": null,
-       "total": 235,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "987359610dc94a298eac55ea48ba1644",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/235 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
+    "from deeply.model.gan import save_img_samples\n",
+    "\n",
+    "samples = gan.get_random_latent_vector(n_samples = batch_size)\n",
+    "\n",
     "for e in trange(config[\"epochs\"]):\n",
     "    for b in tqdm(batch):\n",
-    "        history = gan.fit(b, checkpoint_path = \"gan.h5d5\")\n",
-    "    plot_img(gan)"
+    "        history = gan.fit(b, batch_size = batch_size, checkpoint_path = \"gan.h5d5\")\n",
+    "        save_img_samples(gan, samples = samples, to_file = \"gan.gif\")"
    ]
   }
  ],
