feat: update attempt to fix

--- a/docs/source/models/dcgan.ipynb
+++ b/docs/source/models/dcgan.ipynb
@@ -40,25 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6d0e7c2d",
    "metadata": {
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-09-25 16:34:27.627213: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-09-25 16:34:30.555054: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import deeply\n",
     "import deeply.datasets as dd\n",
@@ -83,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9f1ae69c",
    "metadata": {
     "scrolled": false,
@@ -118,78 +107,7 @@
      "languageId": "python"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.027447223663330078,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": 12,
-       "postfix": null,
-       "prefix": "",
-       "rate": null,
-       "total": 20,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "575b26d4b3a34576bb82572f70383c07",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/20 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.08326530456542969,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": 12,
-       "postfix": null,
-       "prefix": "",
-       "rate": null,
-       "total": 235,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b448ee1744f4573b343edb135b5cb1e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/235 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/helikarlab/dev/deeply/src/deeply/plots.py:113: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
-      "  fig, axes = mplt.subplots(n_plots, 1, sharex = True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from deeply.model.gan import save_img_samples\n",
     "\n",
@@ -197,7 +115,7 @@
     "\n",
     "for e in trange(config[\"epochs\"]):\n",
     "    for b in tqdm(batch):\n",
-    "        history = gan.fit(b, batch_size = batch_size, checkpoint_path = \"gan.h5d5\")\n",
+    "        history = gan.fit(b, checkpoint_path = \"gan.h5d5\")\n",
     "        save_img_samples(gan, samples = samples, to_file = \"gan.gif\")"
    ]
   }
