feat: update fix gan

--- a/docs/source/models/dcgan.ipynb
+++ b/docs/source/models/dcgan.ipynb
@@ -40,14 +40,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6d0e7c2d",
    "metadata": {
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-09-25 23:41:34.561287: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2022-09-25 23:41:37.319585: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import deeply\n",
     "import deeply.datasets as dd\n",
@@ -56,7 +67,7 @@
     "mnist, info = dd.load(\"mnist\", shuffle_files = True, as_supervised = True, with_info = True)\n",
     "image_shape = info.features[\"image\"].shape\n",
     "\n",
-    "gan = deeply.hub(\"dcgan\", input_shape = image_shape, decoder_batch_norm = True, encoder_dropout_rate = 0.3,\n",
+    "gan = deeply.hub(\"wdcgan-gp\", input_shape = image_shape, decoder_batch_norm = True, encoder_dropout_rate = 0.3,\n",
     "                 encoder_layer_growth_rate = 2, scaler = image_scaler,\n",
     "                 init_decoder_units = 256, decoder_layer_growth_rate = 0.5, kernel_size = 5,\n",
     "                 decoder_strides  = [1, 2], final_activation = \"tanh\")"
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9f1ae69c",
    "metadata": {
     "scrolled": false,
@@ -107,7 +118,70 @@
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.024088382720947266,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 14,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": 20,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "adcfcbd0c34e4f4dab16088f2561a0b9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.07108306884765625,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 14,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": 235,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "36eacd370d2f4051928a04b2915ad29a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/235 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from deeply.model.gan import save_img_samples\n",
     "\n",
@@ -116,7 +190,7 @@
     "for e in trange(config[\"epochs\"]):\n",
     "    for b in tqdm(batch):\n",
     "        history = gan.fit(b, checkpoint_path = \"gan.h5d5\")\n",
-    "        save_img_samples(gan, samples = samples, to_file = \"gan.gif\")"
+    "    save_img_samples(gan, samples = samples, to_file = \"gan.png\")"
    ]
   }
  ],
